// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeerList renders correctly 1`] = `<ul />`;

exports[`BeerListContainer renders correctly 1`] = `
<div>
  <div>
    <input
      onChange={[Function]}
      value=""
    />
    <button
      onClick={[Function]}
    >
      Add
    </button>
  </div>
  <ul />
</div>
`;

exports[`InputArea renders correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    value=""
  />
  <button
    onClick={[Function]}
  >
    Add
  </button>
</div>
`;
